uncomment security dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.security.enabled=false
-
+# OMDB API Configuration
+omdb.api.key=50973610
+omdb.api.url=http://www.omdbapi.com/
