solve bugs in services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,8 @@ spring.jpa.show-sql=true
 
 # OMDB API Configuration
 omdb.api.key=50973610
-omdb.api.url=http://www.omdbapi.com/
+
+omdb.api.url=https://www.omdbapi.com/
+
+
+
