Add description in swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,9 @@ omdb.api.key=50973610
 
 omdb.api.url=https://www.omdbapi.com/
 
+# Change Swagger UI path
+springdoc.swagger-ui.path=/docs
+
+
 
 
